--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,7 @@ wheels/
 pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
-.installed.cfg
-*.egg # .DS_Store 
+.insta# .DS_Store
 MANIFEST .DS_Store
 
 # PyInstaller
